Fix scrollbar bug

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -35,7 +35,7 @@ body {
 	@include full-screen(relative);
 	margin: 0;
 	padding: 0;
-	overflow-x: hidden;
+	overflow: hidden;
 	color: c(text-color);
 	font-size: 14px;
 	background-color: c(main-bg);
